fix(comments): comments page glitch with invisible post

--- a/assets/styles/partials/_variables.scss
+++ b/assets/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 //Colors
-$primary-color: #337ab7;
-$secondary-color: #0277bd;
+$primary-color: #6699cc;
+$secondary-color: #336699;
 $hover-color: #f7f7f7;
 $text-color: #666;
 
@@ -9,7 +9,7 @@ $body-font: 'customfont', Arial, Helvetica, sans-serif;
 $title-font: 'customfont', Arial, Helvetica, sans-serif;
 
 //Colors
-$color-header-bg: #8BC9EE;
+$title-color: #6699cc;
 
 //Susy grid setup
 $susy: (
