--- a/assets/styles/partials/modules/_modules-post.scss
+++ b/assets/styles/partials/modules/_modules-post.scss
@@ -9,6 +9,9 @@
 		.post-title{
 			font-size: 19px;
 			color: $primary-color;
+			&:visited{
+				color: $secondary-color;
+			}
 		}
 		.post-subreddit{
 			font-size: 14px;
@@ -19,6 +22,7 @@
 			color: $text-color;
 			margin-top: 3px;
 			margin-bottom: 3px;
+			word-wrap: break-word;
 		}
 		.post-footer{
 			color: $text-color;
